# frelance_escrowBLOCKCHAINCLASSMVP

./: .env.example  .gitignore  README.md  demo.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: event_indexer.py  event_projector.py  reputation.py
backend/sql/: schema.sql
backend/tests/: conftest.py  test_api_endpoints.py  test_reputation_api.py
contracts/: README.md  foundry.toml
contracts/script/: CreateDemoJob.s.sol  DeployFreelanceEscrow.s.sol  DeployLocal.s.sol  DeploySepolia.s.sol
contracts/src/: FreelanceEscrow.sol  MockUSDC.sol
contracts/test/: FreelanceEscrow.t.sol
docs/: ARQUITETURA_MVP.md  DATABASE_SCHEMA.md  MVP_STATUS.md  POS-MVP-ROADMAP.md  ROADMAP.md
docs/fases/: FASE-00-VALIDACAO-DA-BASE.md  FASE-01-DEMO-LOCAL-E2E.md  FASE-02-FLUXO-ESCROW-REAL.md  FASE-03-PRODUTO-MARKETPLACE-MINIMO.md  FASE-04-EVIDENCIAS-E-DISPUTAS.md  FASE-05-REPUTACAO-VERIFICAVEL.md  FASE-06-QUALIDADE-E-SEGURANCA.md  FASE-07-STAGING-BASE-SEPOLIA.md  FASE-08-MVP-BETA-CONTROLADO.md  FASE-09-POS-MVP.md  README.md  RESULTADO-FASE-00.md  RESULTADO-FASE-01.md  RESULTADO-FASE-02.md  RESULTADO-FASE-03.md  RESULTADO-FASE-04.md  RESULTADO-FASE-05.md  RESULTADO-FASE-06.md  RESULTADO-FASE-07.md  RESULTADO-FASE-08.md  RESULTADO-FASE-09.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts  (+4 more)
(+8 files in other folders)
