[project]
name = "freelance-escrow-backend"
version = "0.1.0"
description = "FastAPI backend and event indexer for the swipe-based freelance escrow marketplace."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.1.0",
    "sqlalchemy>=2.0.35",
    "tenacity>=9.0.0",
    "uvicorn>=0.32.0",
    "web3>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
